menubar button text change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Service</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li class="menu-last"><a href="#">Get Touch</a></li>
+                    <li class="menu-last"><a href="#">Read More</a></li>
                   </ul>
             </div>
         </div>
